style.css
/* This is for the universal  */
*{
    margin: 0%;
    padding: 0%;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    margin: 0%;
    padding: 0%;
    width: 100vw;
} 


/* This is for the background */
#container {
    display: grid;
    width: 100%;
    font-family: 'IBM Plex Mono', monospace;
    background-color: #0a192f;
}

header{
    width: 100vw;
    margin-left: 0%;
}
nav {
    margin-top: 2vh;
    position: sticky;
    text-align: right;
}
/* Navbar links are below */
.navlink {
    padding-right: 2vw;
    font-size: 1rem;
    color: #d1d4d6;
    display: inline;
    z-index: 1;
}

.navnumber{
    text-decoration: none;
    display: inline;
    color: #51c0a4;
    font-size: 1rem;
}

/* sociallinks */
li {
    list-style-type: none;
}

a{
    text-decoration: none;
    color: #d1d4d6;
}
#dialog {
	padding: 1rem 3rem;
	background: white;
	max-width: 400px;
	padding-top: 2rem;
	border-radius: 20px;
	border: 0;
    margin-left: 35vw;
    margin-top: 35vh;
	box-shadow: 0 5px 30px 0 rgb(0 0 0 / 10%);
	animation: fadeIn 1s ease both;
	&::backdrop {
		animation: fadeIn 1s ease both;
		background: rgba(11, 17, 48, 0.4);
		z-index: 2;
		backdrop-filter: blur(5px);
	}
	.x {
		filter: grayscale(1);
		border: none;
		background: none;
		position: absolute;
		top: 15px;
        right: 10px;
		transition: ease filter, transform 0.3s;
		cursor: pointer;
		transform-origin: center;
		&:hover {
			filter: grayscale(-1);
			transform: scale(1.1);
		}
	}
	h2 {
		font-weight: 600;
		font-size: 2rem;
		padding-bottom: 1rem;
	}
	p {
		font-size: 1rem;
		line-height: 1.3rem;
		padding: 0.5rem 0;
		a {
			&:visited {
				color: rgb(var(--vs-primary));
			}
		}
	}
}

.blur{
    filter: blur(100px);
}

.unblur{
    filter: blur(-5px);
    background-color: pink;
}

#frontPage {
    display: grid; 
    margin-top: 20vh;
    color: white;
    width: 90%;
    font-family: 'Rammetto', serif;
    line-height: 1.5;
}

#socialLinks {
    margin-left: 1vw;
    text-align: left;
    position: fixed;
    margin-top: 30vh;
    line-height: 3.5rem;
}
.description{
    display: grid;
    margin-left: 15vw;
    margin-right: 12vw;
    row-gap: 1.5vh;
    font-weight: 900;
    font-family: 'IBM Plex Mono', monospace;
}

#greetings {
    font-size: 1.0rem;
    color: #51c0a4;
}

#name {
    font-size: 5rem;
    color: #c6dfef;
}

#profession {
    font-size: 2.7rem;
    color: #d1d4d6;
}

#descreption {
    font-size: 1.35rem;
    color: #d1d4d6;
    width: 40vw;
}

.messageButton {
    line-height: 50px;
    width: 250px;
    cursor: pointer;
    color: white;
    position: relative;
    font-size: large;
    font-family: 'IBM Plex Mono', monospace;
    background-color: transparent;
    border: white 2px solid;
    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
}

/* website URL */
#websiteURl {
    margin-top: 30vh;
    margin-right: 2vw;
    position: fixed;
    font-size: .7rem;
    writing-mode: vertical-lr;
    letter-spacing: .4rem;
    justify-self: right;
}
/* Checkout button */
.button {
    margin-top: 3vh;
}
/* Next page just after the front page */
.TwoRowGrid {
    display: grid;
    margin-left: 20vw;
    margin-top: 30vh;
    width: 60%;
    color: #d1d4d6;
}
.subheading{
    font-size: 1.75rem;
    color: #c6dfef;
    font-weight: 1000;
    margin-bottom: 5vh;
}
#organization-title{
    color: #51c0a4;
    font-size: 1.5rem;
    margin-bottom: 1vh;
    font-weight: 1000;
}
.contents{
    /* display: grid; */
    /* grid-template-columns: auto 40%; */
}
#content {
    margin-top: 2vh;
    text-align: justify;
    font-size: 1rem;
    line-height: 1.5;
    font-weight: bold;
}

.organization-button{
    display: grid;
    margin-top: 1vh;
    grid-template-columns: auto auto;
    justify-self: center;
    width: 10vw;
    font-size: 1.5rem;
}
#organization-button-previous:hover{
    cursor: pointer;
    color: white;
}

#aboutMePage{
    animation-duration: 2s;
    animation-name: "slide-down";
}

#organization-button-next:hover{
    cursor: pointer;
    color: white;
}

.technumber{
    display: inline;
    color: #51c0a4;
    font-size: 1rem;
}
#photo {
    text-align: center;
}

.photo{
    height: 30vh;
    background-color: rgb(238, 238, 238);
}
.projectsTable {
    display: grid;
    grid-template-columns: auto auto auto;
    row-gap: 3vh;
    column-gap: 3vh;
    width: 40vw;
    column-count: 3;
}

.project{
    display: grid;
    grid-template-rows: 25% 75% 20%;
    align-content: center;
    padding: 2vw;
    background-color: transparent;
    border: 2px solid white;
    color:  white;
    width: 19vw;
    height: 40vh;
}

.projectTitle{
    font-size: 1.2rem;
    margin-top: 1vh;
    color: #427388;
}

.tech{
    display: inline;
    font-size: .8rem;
    padding-top: .1vh;
    padding-bottom: .1vh;
    padding-left: .4vh;
    padding-right: .4vh;
    font-weight: 800;
    color:rgb(186, 180, 180)
}

.loadbutton{
    justify-self: center;
    margin-top: 2vh;
}


#more-projects-button{
    width: 10vw;
    height: 5vh;
    background-color: transparent;
    border: solid 2px white;
    color: white;
    font-weight: bold;
}
#organizationPhoto{
    width: 12vw;
    height: 20vh;
    padding-left: 5%;
}

.FourRowGrid{
    margin-top: 30vh;
    display: grid;
    justify-self: center;
    grid-template-rows: auto auto auto auto;
    width: 65%;
    row-gap: 3vh;
    margin-bottom: 40vh;
}

.getInTouch{
    display: grid;
    font-size: 50px;
    color: white;
    text-align: center;
}

.getInTouchDescription{
    margin-top: -2vh;
    display: flex;
    justify-self: center;
    text-align: center;
    color: white;
    font-size: 1.75rem;
    letter-spacing: 2px;
    width: 70%;
}

.getInTouchHeading{
    text-align: center;
}

.getInTouchButton{
    text-align: center;
}
footer{
    color: white;
    display: grid;
    justify-self: center;
    margin-bottom: 1vh;
}
#aboutme {
    color: rgb(255, 255, 255);
    font-size: 1.5rem;
    padding: 2%;
}

#aboutme:target{
    scroll-behavior: smooth;
}
#YORA {
    display: grid;
    justify-content: center;
    align-items: center;
    align-self: center;
}

#bt {
    display: grid;
    justify-content: center;
}

.contactDescription {
    display: grid;
    grid-template-rows: auto auto;
    row-gap: 10%;
}

#checkoutButttonbottom {
    padding-left: 5%;
    padding-right: 5%;
    padding-top: 2.5%;
    padding-bottom: 2.5%;
    font-size: 1rem;
    width: 11vw;
    height: 8vh;
    box-shadow: 2px 2px 2px;
}

#projectTitle {
    font-size: 2rem;
}

.projectDescription {
    text-align: justify;
    font-size: 0.95rem;
}

.projectStack{
    font-size: 0.95rem;
}

#links {
    display: inline;
    margin-left: 5%;
}

#portfolioUrl {
    text-decoration: none;
    color: white;
}

.navlinkButton {
    border: 0 solid;
    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
    outline: 1px solid;
    outline-color: rgba(255, 255, 255, .5);
    outline-offset: 0px;
    text-shadow: none;
    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
}

.navlinkButton:hover {
    border: 1px solid;
    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
    outline-color: rgba(255, 255, 255, 0);
    outline-offset: 15px;
    text-shadow: 1px 1px 2px #427388;
}

#projectTable:hover{
    cursor: pointer;
}

.messageButton:hover {
    border: 1px solid;
    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
    outline-color: rgba(255, 255, 255, 0);
    outline-offset: 15px;
}

#responsiveNavbar{
    height: 35px;
    width: 35px;
}

.projectScroll{
    overflow-y: scroll;
}

